--- a/src/index.scss
+++ b/src/index.scss
@@ -3,10 +3,10 @@
   font-style: normal;
   font-weight: normal;
 
-  src: url('FRACTAL.ttf') format('truetype');
+  src: url('/my-homepage-react/FRACTAL.ttf') format('truetype');
 }
 
 #App {
   height: 100vh;
-  background: url("/Wallpapers/1089203-final.jpg") 0% 60% /cover no-repeat;
+  background: url("/my-homepage-react/Wallpapers/1089203-final.jpg") 0% 60% /cover no-repeat;
 }
